Build filter function
